--- a/gdelt_cooperation/pipelines/gdelt_spark/triggers.yaml
+++ b/gdelt_cooperation/pipelines/gdelt_spark/triggers.yaml
@@ -1,5 +1,5 @@
 triggers:
-- name: test_example_trigger_2
+- name: hourly_trigger
   schedule_type: time
   schedule_interval: "@hourly"
   start_time: 2024-04-18
